fixed popup with scrollbar even if it is not needed

--- a/ungiorno-console/src/app/app.scss
+++ b/ungiorno-console/src/app/app.scss
@@ -145,3 +145,8 @@ ion-picker-cmp   {
     padding-left:16px;
     text-align: center;
 }
+.alert-fixed{
+    .alert-message{
+        overflow: auto;
+    }
+}
